# kivymd-icon-viewer

./: .gitignore  README.md  pyproject.toml
src/: iconviewer.py  kivymd_icon_viewer.py  main.py
src/kivyx/uix/behavior/: tablikelooks.py
