[tool.poetry]
name = "kivymd-icon-viewer"
version = "0.1.1"
description = "KivyMD Icon Viewer"
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "kivymd_icon_viewer.py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
iconviewer = 'kivymd_icon_viewer:launch'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
